<resources>
    <string name="app_name">Simple IOU Tracker</string>
    <string name="cancelButton">Cancel</string>
    <string name="confirmButton">Confirm</string>
    <string name="titleLabel">Title/Person</string>
    <string name="totalLabel">Total Owed</string>
    <string name="dueLabel">Due Date</string>
    <string name="editButton">Edit</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="payed">Amount Payed</string>
    <string name="addIOUButton">New IOU</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>



</resources>
