<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/popup_bg"

    android:orientation="vertical">


    <TextView
        android:id="@+id/payedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:text="@string/payed"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/payedLabel"
        android:layout_marginEnd="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/posOrNeg"
        android:layout_toStartOf="@+id/posOrNeg"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/payedLabel"
        android:layout_alignRight="@+id/payedLabel"
        android:layout_below="@+id/editText"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="29dp"
        android:text="@string/dueLabel"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <DatePicker
        android:id="@+id/datePicker2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <RadioGroup
        android:id="@+id/posOrNeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:checkedButton="@+id/negative"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp">

        <RadioButton
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />

        <RadioButton
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/datePicker2"
        android:layout_marginTop="23dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"


            android:text="@string/cancelButton" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/confirmButton" />

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:textColor="@android:color/holo_red_dark"
        android:layout_alignTop="@+id/payedLabel"
        android:layout_alignLeft="@+id/posOrNeg"
        android:layout_alignStart="@+id/posOrNeg" />

</RelativeLayout>